--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,25 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev":" tsc -b && node ./dist/index.js"
+    "dev": " tsc -b && node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@prisma/client": "^6.16.3",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "axios": "^1.12.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "faiss-node": "^0.5.1",
+    "multer": "^2.0.2",
+    "openai": "^6.1.0",
+    "pg": "^8.16.3",
+    "prisma": "^6.16.3",
+    "redis": "^5.8.3"
+  }
 }
